Remove delivery times endpoint + logic
